--- a/master_data/templates/master_data/index.html
+++ b/master_data/templates/master_data/index.html
@@ -3,10 +3,7 @@
 {% block title %}Movie List{% endblock title %}
 
 {% block content %}
-<form method="get">
-    <input type="text" name="q" placeholder="Search movies...">
-    <button type="submit">Search</button>
-</form>
+<input type="text" id="searchBar" placeholder="Search movies...">
 <hr>
 <h1>Popular Movies this month</h1>
 <div class="movie-container">
@@ -24,3 +21,23 @@
     {% endfor %}
 </div>
 {% endblock content %}
+
+
+{% block script %}
+<script>
+    document.getElementById('searchBar').addEventListener('input', function() {
+        var searchValue = this.value.toLowerCase();
+        var movies = document.querySelectorAll('.movie-card');
+
+        movies.forEach(function(movie) {
+            var title = movie.querySelector('.movie-title').textContent.toLowerCase();
+            if (title.includes(searchValue)) {
+                movie.style.display = '';
+            } else {
+                movie.style.display = 'none';
+            }
+        });
+    });
+</script>
+
+{% endblock script %}
